# caspar-server-gui

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: notify-docs.yml
batch/: caspar-batch-starter.bat  caspar-batch-starter.md
docs/: DECKLINK-HARDWARE-VERIFICATION.md  IMPLEMENTATION.md  ROADMAP.md  TODO.md
key-fill-identifier/: index.html
public/: site.webmanifest
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sdk/decklink/: README.md
src-tauri/sdk/decklink/wrapper/: decklink_wrapper.cpp  decklink_wrapper.h
src-tauri/src/: lib.rs  main.rs
src-tauri/src/amcp/: client.rs  commands.rs  mod.rs
src-tauri/src/config/: caspar.rs  global.rs  mod.rs  schema.rs
src-tauri/src/decklink/: devices.rs  duplex.rs  mod.rs
src-tauri/src/http_server/: mod.rs
src-tauri/src/system/: mod.rs  ndi.rs  network.rs  scanner.rs
src-tauri/src/tsl/: mod.rs
src-tauri/tests/: decklink_hw.rs
src/components/: ChannelsPanel.tsx  DeckLinkPanel.tsx  PathsPanel.tsx  PreviewPanel.tsx  ProfileSidebar.tsx  ServerPanel.tsx  SetupWizard.tsx  StatusBar.tsx  SystemInfoPanel.tsx  TabBar.tsx  TslPanel.tsx  index.ts
src/lib/: store.ts  tauri.ts  types.ts  validation.ts
src/styles/: main.css
test/: key-fill-identifier.html  key-fill-tester.html  key-fill-tester.md
test/audio/: README.md
