[package]
name = "caspar-server-gui"
version = "0.1.0"
description = "Cross-platform GUI for configuring CasparCG Server"
authors = ["THAST"]
edition = "2021"

[lib]
name = "caspar_server_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
decklink = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
tokio = { version = "1", features = ["net", "io-util", "sync", "time"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
